--- a/src/js/components/buttons/favorite-btn.html
+++ b/src/js/components/buttons/favorite-btn.html
@@ -1,4 +1,4 @@
-<button class="btn btn-sm btn-outline-primary"
+<button class="btn btn-sm"
   ng-class="{ 'disabled' : $ctrl.isSubmitting,
               'btn-outline-primary': !$ctrl.article.favorited,
               'btn-primary': $ctrl.article.favorited }"
